[gd_scene load_steps=13 format=2]

[ext_resource path="res://map/multi-player/client/battle.gd" type="Script" id=1]
[ext_resource path="res://assets/gameplay-camera/gameplay_camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/terrain/terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gameplay-camera/gameplay_camera.gd" type="Script" id=4]
[ext_resource path="res://assets/terrain/terrain.gd" type="Script" id=5]
[ext_resource path="res://scene/ships/cruiser/cruiser.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/ships/cruiser/cruiser.gd" type="Script" id=7]
[ext_resource path="res://assets/cursor/cursor.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/cursor/cursor.gd" type="Script" id=9]
[ext_resource path="res://assets/cursor/cursor_1.png" type="Texture" id=10]

[sub_resource type="ProceduralSky" id=1]
ground_bottom_color = Color( 0.647059, 0.839216, 0.945098, 1 )
ground_horizon_color = Color( 0.85098, 0.85098, 0.85098, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[node name="battle" type="Node"]
script = ExtResource( 1 )

[node name="player_1" type="KinematicBody" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
script = ExtResource( 7 )

[node name="player_2" type="KinematicBody" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 10, 0 )
script = ExtResource( 7 )

[node name="cursor" type="Sprite3D" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, -2.18557e-07, 1, 0, -5, -4.37114e-08, 0, 0, 0 )
texture = ExtResource( 10 )
script = ExtResource( 9 )

[node name="airborne_target_holder" type="Node" parent="."]

[node name="ground_target_holder" type="Node" parent="."]

[node name="terrain" type="Node" parent="." instance=ExtResource( 3 )]
script = ExtResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 20, -20 )
light_energy = 0.3
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="cameraPivot" type="Spatial" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 8.90326, 0, 0.0998206 )
script = ExtResource( 4 )

[connection signal="on_ground_clicked" from="terrain" to="." method="_on_terrain_on_ground_clicked"]
